--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-  <div class="container">
-    <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Receipe Name</label>
-          <input type="text" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Receipe Description</label>
-          <textarea class="form-control"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Receipe Image</label>
-            <textarea class="form-control"></textarea>
-          </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-</div>
+  <div class="container mt-5">
+
+
+    <form class="col-6-mx-auto card p-3 shadow-lg" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <h2>Add Receipe</h2>
+      <hr>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Receipe Name</label>
+        <input name="receipe_name" required type="text" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1"   class="form-label">Receipe Description</label>
+        <textarea class="form-control" name="receipe_description" required></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Receipe Image</label>
+        <input name="receipe_image" type="file" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-success">Add Receipe</button>
+    </form>
+  </div>
 </body>
+
 </html>
