--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -31,6 +31,27 @@
       </div>
       <button type="submit" class="btn btn-success">Add Receipe</button>
     </form>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Receipe Name</th>
+          <th scope="col">Receipe Description</th>
+          <th scope="col">Receipe Image</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for receipe in receipes %}
+        <tr>
+          <th scope="row">{{forloop.counter}}</th>
+          <td>{{receipe.receipe_name}}</td>
+          <td>{{receipe.receipe_description}}</td>
+          <td>{{receipe.receipe_image}}</td>
+          <td><a href="/delete_receipe/{{receipe.id}}/" class="btn btn-danger">Delete</a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </body>
 
