--- a/base/vege/templates/login.html
+++ b/base/vege/templates/login.html
@@ -11,9 +11,7 @@
 
 <body>
     <div class="container mt-5">
-
-
-        <form class="col-6-mx-auto card p-3 shadow-lg" method="post" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <h2>Login</h2>
             <hr>
@@ -26,13 +24,12 @@
             </div>
             {% endif %}
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Username</label>
-                    <input type="text" class="form-control" name="username" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <label>Email</label>
+                    <input type="text" name="username" class="form-control">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                    <label>Password</label>
+                    <input type="password" name="password" class="form-control" >
                 </div>
 
                 <p>
