--- a/base/vege/templates/register.html
+++ b/base/vege/templates/register.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="container mt-5">
-
-
-        <form class="col-6-mx-auto card p-3 shadow-lg" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <h2>Register</h2>
-            <hr>
-            {% if messages %}
-           
-            <div class="alert alert-primary" role="alert">
-                {% for message in messages %}
-                {{ message }}
-                {% endfor %}
-            </div>
-        {% endif %}
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">First Name</label>
-                <input type="text" class="form-control" name="first_name" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Last Name</label>
-                <input type="text" class="form-control" name="last_name" id="exampleInputPassword1">
-            </div>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Username</label>
-                    <input type="text" class="form-control"  name="username" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control"name="password" id="exampleInputPassword1">
-                </div>
-                <p>
-                    Already have an account  <a href="/login/">Login</a>
-                </p>
-                <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-</body>
-
+	<body>
+		<div class="container mt-5">
+			<form
+				method="post"
+				enctype="multipart/form-data">
+				{% csrf_token %}
+				<h2>Register</h2>
+				<hr />
+				{% if messages %}
+				<div
+					role="alert">
+					{% for message in messages %} {{ message }} {% endfor %}
+				</div>
+				{% endif %}
+				<div class="mb-3">
+					<label class="form-label">First Name</label>
+					<input
+						type="text"
+						class="form-control"
+						name="first_name" />
+				</div>
+				<div class="mb-3">
+					<label class="form-label">Last Name</label>
+					<input
+						type="text"
+						class="form-control"
+						name="last_name" />
+				</div>
+				<div class="mb-3">
+					<label class="form-label">Email</label>
+					<input
+						type="email"
+						class="form-control"
+						name="username" />
+				</div>
+				<div class="mb-3">
+					<label class="form-label">Password</label>
+					<input
+						type="password"
+						class="form-control"
+						name="password" />
+				</div>
+				<p>Already have an account <a href="/login/">Login</a></p>
+				<button class="btn btn-primary" type="submit">Submit</button>
+			</form>
+		</div>
+	</body>
 </html>
