fix: login and register view

--- a/base/vege/templates/register.html
+++ b/base/vege/templates/register.html
@@ -22,7 +22,7 @@
 				<h2>Register</h2>
 				<hr />
 				{% if messages %}
-				<div
+				<div style="color: red;"
 					role="alert">
 					{% for message in messages %} {{ message }} {% endfor %}
 				</div>
