--- a/base/vege/templates/login.html
+++ b/base/vege/templates/login.html
@@ -25,7 +25,7 @@
             {% endif %}
                 <div class="mb-3">
                     <label>Email</label>
-                    <input type="text" name="username" class="form-control">
+                    <input type="email" name="username" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label>Password</label>
