--- a/base/vege/templates/receipes.html
+++ b/base/vege/templates/receipes.html
@@ -34,7 +34,7 @@
 				enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="mb-3">
-					<label>Receipe Name</label>
+					<label class="form-label">Receipe Name</label>
 					<input
 						class="form-control"
 						name="receipe_name"
@@ -42,15 +42,15 @@
 						type="text" />
 				</div>
 				<div class="mb-3">
-					<label>Receipe Description</label>
+					<label class="form-label">Receipe Description</label>
 					<textarea
 						class="form-control"
 						required
 						name="receipe_description"></textarea>
 				</div>
 				<div class="mb-3">
-					<label class="form-label">Receipe Image File Location</label>
-					<input class="form-control" name="receipe_image" type="file"
+					<label class="form-label">Receipe Price</label>
+					<input class="form-control" name="receipe_price" type="number"
 				</div>
 				<br />
 				<button class="btn btn-primary form-control">Add Receipe</button>
@@ -75,7 +75,7 @@
 						<th scope="col">#</th>
 						<th scope="col">Receipe Name</th>
 						<th scope="col">Receipe Description</th>
-						<th scope="col">Receipe Image File Location</th>
+						<th scope="col">Receipe Price</th>
 						<th scope="col">Receipe Delete</th>
 						<th scope="col">Receipe Update</th>
 					</tr>
@@ -86,7 +86,7 @@
 						<th scope="row">{{forloop.counter}}</th>
 						<td>{{receipe.receipe_name}}</td>
 						<td>{{receipe.receipe_description}}</td>
-						<td>{{receipe.receipe_image}}</td>
+						<td>{{receipe.receipe_price}}</td>
 						<td>
 							<a
 								class="btn btn-danger"
