--- a/base/vege/templates/login.html
+++ b/base/vege/templates/login.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+	<body>
+		<div class="container mt-5">
+			<form
+				method="post"
+				enctype="multipart/form-data">
+				{% csrf_token %}
+				<h2>Login</h2>
+				<hr />
+				{% if messages %}
 
-<body>
-    <div class="container mt-5">
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <h2>Login</h2>
-            <hr>
-            {% if messages %}
-            
-            <div class="alert alert-primary" role="alert">
-                {% for message in messages %}
-                {{ message }}
-                {% endfor %}
-            </div>
-            {% endif %}
-                <div class="mb-3">
-                    <label>Email</label>
-                    <input type="email" name="username" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label>Password</label>
-                    <input type="password" name="password" class="form-control" >
-                </div>
+				<div
+					class="alert alert-primary"
+					role="alert">
+					{% for message in messages %} {{ message }} {% endfor %}
+				</div>
+				{% endif %}
+				<div class="mb-3">
+					<label class="form-label">Email</label>
+					<input
+						type="email"
+						name="username"
+						class="form-control" />
+				</div>
+				<div class="mb-3">
+					<label class="form-label">Password</label>
+					<input
+						type="password"
+						name="password"
+						class="form-control" />
+				</div>
 
-                <p>
-                    Don't have account <a href = "/register/">Register</a>
-                </p>
-                <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-</body>
-
+				<p>Don't have account <a href="/register/">Register</a></p>
+				<button
+					type="submit"
+					class="btn btn-primary">
+					Submit
+				</button>
+			</form>
+		</div>
+	</body>
 </html>
