--- a/base/vege/templates/receipes.html
+++ b/base/vege/templates/receipes.html
@@ -47,6 +47,7 @@
 				<div class="mb-3">
 					<label class="form-label">Receipe Price</label>
 					<input class="form-control" name="receipe_price" type="number"
+					required
 				</div>
 				<br />
 				<button class="btn btn-primary form-control">Add Receipe</button>
