--- a/base/vege/templates/login.html
+++ b/base/vege/templates/login.html
@@ -19,12 +19,12 @@
 				method="post"
 				enctype="multipart/form-data">
 				{% csrf_token %}
-				<h2>Login</h2>
+				<h2 style="color: green">Login</h2>
 				<hr />
 				{% if messages %}
 
 				<div
-					class="alert alert-primary"
+					style="color: red"
 					role="alert">
 					{% for message in messages %} {{ message }} {% endfor %}
 				</div>
@@ -44,7 +44,7 @@
 						class="form-control" />
 				</div>
 
-				<p>Don't have account <a href="/register/">Register</a></p>
+				<p>Don't have account <a style="color: red; text-decoration: none;"  href="/register/">Register</a></p>
 				<button
 					type="submit"
 					class="btn btn-primary">
