feat: update member's dahboard page

--- a/base/vege/templates/login.html
+++ b/base/vege/templates/login.html
@@ -10,7 +10,7 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Login</title>
 	</head>
 
 	<body>
@@ -43,8 +43,6 @@
 						name="password"
 						class="form-control" />
 				</div>
-
-				<p>Don't have account <a style="color: red; text-decoration: none;"  href="/register/">Register</a></p>
 				<button
 					type="submit"
 					class="btn btn-primary">
