--- a/base/vege/templates/receipes.html
+++ b/base/vege/templates/receipes.html
@@ -10,11 +10,19 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Dashboard</title>
 	</head>
 
 	<body>
 		<div class="container mt-5">
+			<!-- {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %} -->
+
 			<h2 style="margin-left: 350px; color: red">Admin Dashboard</h2>
 			<a
 				style="display: flex; justify-content: flex-end; text-decoration: none"
