--- a/base/home/templates/base.html
+++ b/base/home/templates/base.html
@@ -67,7 +67,7 @@
 				Total = Rs <span id="total">{{ total }}</span>
 			</h3>
 		</div>
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script>
 			$(document).ready(function () {
 				$(".add-btn").on("click", function () {
