feat: updated is buyer in register to is admin

--- a/base/home/templates/base.html
+++ b/base/home/templates/base.html
@@ -36,7 +36,7 @@
 	</head>
 	<body>
 		<div class="container mt-5">
-			<h2 style="margin-left: 350px; color: red">Member Dashboard</h2>
+			<h2 style="margin-left: 350px; color: red">Buy you meal for the day</h2>
 			<a
 				style="display: flex; justify-content: flex-end; text-decoration: none"
 				href="/logout">
