--- a/base/vege/templates/register.html
+++ b/base/vege/templates/register.html
@@ -61,7 +61,7 @@
 						required />
 				</div>
 				<div class="mb-3">
-					<label class="form-label">Is Buyer?</label>
+					<label class="form-label">Is Admin?</label>
 					<input
 						type="checkbox"
 						name="is_buyer" />
