[FEAT] updated endpoints with messages and bugs

--- a/base/home/templates/base.html
+++ b/base/home/templates/base.html
@@ -81,7 +81,7 @@
 			<div
 				id="payment-section"
 				class="inline-container hidden">
-				<h2>Done adding Receipes ??</h2>
+				<h2>Done adding Receipes</h2>
 				<a
 					id="proceed-btn"
 					class="btn btn-primary"
