--- a/base/home/templates/base.html
+++ b/base/home/templates/base.html
@@ -17,7 +17,7 @@
 				background-color: #d3e1ef;
 			}
 			.btn-primary {
-				background-color: #007bff;
+				background-color: green;
 				border-color: #007bff;
 			}
 			.btn-primary:hover {
@@ -72,20 +72,18 @@
 				</tbody>
 			</table>
 			<hr />
-            <div class="inline-container">
-			<h3 style="margin-left: 70%;">
-				Total = Rs <span id="total">{{ total }}</span>
-			</h3>
-			<!-- <a id="reset" class="btn btn-primary">Reset</a> -->
-        </div>
+			<div class="inline-container">
+				<h3 style="margin-left: 70%">
+					Total Amount = Rs <span id="total">{{ total }}</span>
+				</h3>
+			</div>
 			<div
 				id="payment-section"
 				class="inline-container hidden">
-				<h2>Done adding Receipes</h2>
 				<a
 					id="proceed-btn"
 					class="btn btn-primary"
-                    href="/upi_id"
+					href="{% url 'create_razorpay_payment_link' %}"
 					>Proceed to Payment</a
 				>
 			</div>
@@ -93,6 +91,27 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script>
 			$(document).ready(function () {
+				// Reset the total amount on page load via AJAX
+				$.ajax({
+					url: '{% url "reset_total" %}', // You'll need to create this view
+					type: "POST",
+					data: {
+						csrfmiddlewaretoken: "{{ csrf_token }}",
+					},
+					success: function (response) {
+						// Update the displayed total to 0
+						$("#total").text("0.00");
+
+						// Reset all buttons to "Add" state
+						$(".add-btn")
+							.text("Add")
+							.removeClass("btn-danger")
+							.addClass("btn-primary");
+
+						// Hide payment section
+						$("#payment-section").addClass("hidden");
+					},
+				});
 				let added_items = 0;
 				$(".add-btn").on("click", function () {
 					let button = $(this);
